# fbx_direct

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.adoc
examples/: convert-to-ascii.rs  export-import.rs  import-export-binary.rs  simple.rs
src/: common.rs  error.rs  lib.rs
src/reader/: error.rs  mod.rs
src/reader/parser/: ascii.rs  binary.rs  macros.rs  mod.rs
src/writer/: error.rs  events.rs  mod.rs
src/writer/emitter/: ascii.rs  binary.rs  mod.rs
tests/: binary-export-import.rs
tests/assets/: blender_2_72b_default-fbx7400.fbx  fbxsdk-2016.1.2-empty-binary-fbx7500.fbx
