[package]
name = "fbx_direct"
version = "0.6.0"
authors = ["Takuma Yoshioka <nu11p0.6477@gmail.com>"]

documentation = "http://l1048576.github.io/fbx_direct/doc/fbx_direct/index.html"
homepage = "https://github.com/l1048576/fbx_direct"
repository = "https://github.com/l1048576/fbx_direct"
readme = "README.adoc"
keywords = ["fbx", "graphics", "3d", "model"]
license = "MIT OR Apache-2.0"
description = "Low-level FBX library"

[dependencies]
log = "^0.3.5"
byteorder = "^0.5"
flate2 = "^0.2.13"
rustc-serialize = "^0.3.16"

[dev-dependencies]
env_logger = "^0.3.2"
