[package]
name = "fbx_direct"
version = "0.6.2"
authors = ["Takuma Yoshioka <nu11p0.6477@gmail.com>"]

documentation = "https://docs.rs/fbx_direct/"
homepage = "https://github.com/l1048576/fbx_direct"
repository = "https://github.com/l1048576/fbx_direct"
readme = "README.adoc"
keywords = ["fbx", "graphics", "3d", "model"]
license = "MIT / Apache-2.0"
description = "Low-level FBX library"

[dependencies]
log = "0.4.2"
byteorder = "1.2.3"
flate2 = "1.0.1"
base64 = "0.9"

[dev-dependencies]
env_logger = "0.5.10"
